# service-template

./: .coveragerc  .dockerignore  .env.example  .gitignore  AGENTS.md  AGENTS.md.jinja  ARCHITECTURE.md  ARCHITECTURE.md.jinja  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  Makefile.jinja  README.md  README.md.jinja  SERVICE_AUTOMATION_PLAN.md  SYNC_SERVICES_MIGRATION_PLAN.md  architecture_report.md  backlog.md  clean_backlog.py  copier.yml  mypy.ini  pyproject.toml  pytest.ini  ruff.toml  services.yml  services.yml.jinja  spec-api-generation-plan-iterations.md  spec-api-generation-plan.md  template_service_spec.md
.githooks/: pre-commit  pre-push  pre-push-full
.github/: CONTRIBUTING.md
apps/tg_bot/: Dockerfile  README.md  main.py  pyproject.toml
apps/tg_bot/src/: __init__.py
apps/tg_bot/tests/unit/: test_placeholder.py
docs/: ARCHITECTURE.md  COPIER_MIGRATION_PLAN.md  DEVELOPMENT.md  INFRA_AUDIT.md  MANIFESTO.md  RESTRUCTURING_PLAN.md  TEMPLATE_DEVELOPMENT.md  TEMPLATE_TEST_REPORT.md  TESTING.md  backlog.md  brainstorm-frontend.md  brainstorm-tooling-removal.md  e2e-issues-iteration4.md  e2e-issues-iteration5.md  e2e-issues-iteration6.md  e2e-issues-iteration7.md  e2e-issues-lazy-broker.md  e2e-issues-poetry-to-uv.md  e2e-issues-tooling-removal.md  openapi.json  plan-tooling-removal.md  rust-migration-analysis.md  simplification-plan.md  spec-optional-issues.md  unified-handlers-plan.md
framework/: compose_sync.py  enforce_spec_compliance.py  generate.py  generate_from_spec.py  service_info.py  sync_services.py  validate_specs.py
infra/: .env.test  Caddyfile  README.md  compose.base.yml  compose.base.yml.jinja  compose.dev.yml  compose.dev.yml.jinja  compose.framework.yml  compose.frontend.yml  compose.prod.yml  compose.test.yml  compose.tests.integration.yml  (+2 more)
services/backend/: AGENTS.md  Dockerfile  README.md  __init__.py  pyproject.toml
services/backend/docs/: openapi.json
services/backend/migrations/: env.py
services/backend/spec/: debug.yaml  users.yaml
services/backend/src/app/api/: router.py
services/backend/src/app/api/v1/: health.py  users.py
services/backend/src/app/repositories/: user.py
services/backend/src/app/schemas/: user.py
services/backend/src/controllers/: debug.py  users.py
services/backend/src/core/: __init__.py  db.py  settings.py
services/backend/tests/: conftest.py
services/backend/tests/unit/: test_debug.py  test_users.py
services/notifications_worker/: Dockerfile  README.md  pyproject.toml
services/notifications_worker/src/: app.py  main.py
services/notifications_worker/tests/: test_smoke.py
services/test_service/: Dockerfile  pyproject.toml
services/test_service/src/: main.py
services/test_service/src/controllers/: commands.py
shared/: pyproject.toml
shared/spec/: events.yaml  models.yaml  rest.yaml
template/.framework/: pyproject.toml
template/.framework/framework/: enforce_spec_compliance.py  generate.py  sync_services.py  toolchain.py
template/.framework/framework/contracts/: __init__.py  env_contract.py  env_usage.py
template/.framework/framework/frontend/: __init__.py
template/.framework/framework/generators/: __init__.py  base.py  context.py  controllers.py  event_adapter.py  events.py  protocols.py  registry.py  routers.py  schemas.py
template/.framework/framework/lib/: compose_blocks.py  env.py  fs.py  service_scaffold.py
template/.framework/framework/lint/: __init__.py  controller_sync.py
template/.framework/framework/openapi/: __init__.py  generator.py
template/.framework/framework/spec/: loader.py  models.py  operations.py  types.py
template/.framework/framework/templates/codegen/: client.py.j2  controller.py.j2  event_adapter.py.j2  protocols.py.j2  registry.py.j2  router.py.j2
template/.framework/framework/templates/docker/: node.Dockerfile.j2  python-fastapi.Dockerfile.j2  python-faststream.Dockerfile.j2
template/.framework/framework/templates/scaffold/: README.md
template/.framework/framework/templates/scaffold/services/node/: Dockerfile  README.md
template/.framework/framework/templates/scaffold/services/python/: AGENTS.md
template/.framework/framework/templates/scaffold/services/python-fastapi/: AGENTS.md  Dockerfile
template/.framework/framework/templates/scaffold/services/python-faststream/: Dockerfile  README.md
template/services/backend/: AGENTS.md  Dockerfile  Dockerfile.jinja  README.md  __init__.py  env.contract.yaml.jinja  pyproject.toml
template/services/backend/docs/: openapi.json
template/services/backend/migrations/: alembic.ini  env.py
template/services/backend/scripts/: start.sh
template/services/backend/spec/: users.yaml
template/services/backend/src/: __init__.py
template/services/backend/src/app/: __init__.py  lifespan.py  lifespan.py.jinja  middleware.py
template/services/backend/src/app/api/: router.py
template/services/backend/src/app/api/routers/: debug.py  users.py
template/services/backend/src/app/repositories/: user.py
template/services/backend/src/controllers/: debug.py  users.py
template/services/backend/src/core/: db.py  logging.py  settings.py
template/services/backend/tests/: __init__.py  conftest.py
template/services/backend/tests/unit/: test_debug.py  test_events.py  test_middleware.py  test_users.py
template/services/notifications_worker/: AGENTS.md  Dockerfile  Dockerfile.jinja  env.contract.yaml.jinja  pyproject.toml
template/services/notifications_worker/spec/: notifications.yaml
template/services/notifications_worker/src/: __init__.py  handlers.py  main.py
template/services/notifications_worker/src/controllers/: notifications.py
template/services/notifications_worker/tests/: test_smoke.py
template/services/tg_bot/: AGENTS.md.jinja  Dockerfile  Dockerfile.jinja  README.md.jinja  env.contract.yaml.jinja  pyproject.toml
template/services/tg_bot/spec/: manifest.yaml.jinja
template/services/tg_bot/src/: main.py  main.py.jinja
template/services/tg_bot/tests/unit/: __init__.py  test_command_handler.py  test_command_handler.py.jinja  test_middleware.py  test_smoke.py
(+268 files in other folders)
