[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "service-template"
version = "0.1.0"
description = "Monorepo template with backend, frontend, and Telegram bot"
authors = [{name = "Example", email = "example@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "sqlalchemy>=2.0",
    "uvicorn>=0.29",
    "pydantic>=1.10",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
    "mypy>=1.10",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]
