[tool.poetry]
name = "tg-bot"
version = "0.1.0"
description = "Telegram bot client"
authors = ["Example <example@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "21.4"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0,<9.0"
