[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Service-template backend"
authors = ["Example <example@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.110.0,<1.0.0"
uvicorn = {extras = ["standard"], version = ">=0.29.0,<1.0.0"}
sqlalchemy = ">=2.0.0,<3.0.0"
alembic = ">=1.13.0,<2.0.0"
psycopg = {extras = ["binary"], version = ">=3.1.0,<4.0.0"}
pydantic = "^2.5"
pydantic-settings = "^2.0"

[tool.poetry.group.dev.dependencies]
httpx = ">=0.27.0,<0.28.0"
mypy = ">=1.10.0,<2.0.0"
pytest = ">=8.0,<9.0"
ruff = ">=0.4.0,<1.0.0"
