[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Service-template backend"
authors = ["Example <example@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.110.0,<1.0.0"
uvicorn = {extras = ["standard"], version = ">=0.29.0,<1.0.0"}
sqlalchemy = ">=2.0.0,<3.0.0"
alembic = ">=1.13.0,<2.0.0"
psycopg = {extras = ["binary"], version = ">=3.1.0,<4.0.0"}
asyncpg = ">=0.29.0,<1.0.0"
pydantic = "^2.5"
pydantic-settings = "^2.0"
shared = {path = "../../shared", develop = true}

[tool.poetry.group.dev.dependencies]
httpx = ">=0.27.0,<0.28.0"
pytest-asyncio = ">=0.23.0,<1.0.0"
aiosqlite = ">=0.19.0,<1.0.0"
