[tool.poetry]
name = "notifications-worker"
version = "0.1.0"
description = "Notifications worker"
authors = ["Example <example@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
mypy = "^1.10.0"
types-PyYAML = "^6.0"

