[tool.poetry]
name = "notifications-worker"
version = "0.1.0"
description = "Notifications worker"
authors = ["Example <example@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.121.2"
uvicorn = "^0.38.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^4.1.0"
mypy = "^1.10.0"
types-PyYAML = "^6.0"
