[tool.poetry]
name = "test_service"
version = "0.1.0"
description = "Test service for verifying event flow"
authors = ["Example <example@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
faststream = {extras = ["redis"], version = "^0.5.0"}
shared = {path = "../../shared", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
