[tool.poetry]
name = "test_service"
version = "0.1.0"
description = "Test service for verifying event flow"
authors = ["Example <example@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
faststream = {extras = ["redis"], version = "^0.5.0"}
shared = {path = "../../shared", develop = true}

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
types-PyYAML = "^6.0"
pytest = "^8.0"
pytest-cov = "^4.1.0"
