[project]
name = "framework"
version = "0.1.0"
description = "Service template framework — code generation, spec validation, linting"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.5",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "datamodel-code-generator[http]>=0.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
