[project]
name = "backend"
version = "0.1.0"
description = "Service-template backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0,<1.0.0",
    "uvicorn[standard]>=0.29.0,<1.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "alembic>=1.13.0,<2.0.0",
    "psycopg[binary]>=3.1.0,<4.0.0",
    "asyncpg>=0.29.0,<1.0.0",
    "pydantic>=2.5",
    "pydantic-settings>=2.0",
    "shared",
    "faststream[redis]>=0.5.0",
]

[dependency-groups]
dev = [
    "mypy>=1.10.0",
    "types-PyYAML>=6.0",
    "httpx>=0.27.0,<0.28.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "pytest-cov>=4.1.0",
    "aiosqlite>=0.19.0,<1.0.0",
]

[tool.uv.sources]
shared = { path = "../../shared", editable = true }
