[tool.poetry]
name = "notifications-worker"
version = "0.1.0"
description = "Service for notifications (email, telegram)"
authors = ["Example <example@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
faststream = {extras = ["redis"], version = "^0.5.0"}
sqlalchemy = {version = "^2.0", extras = ["asyncio"]}
shared = {path = "../../shared", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
mypy = "^1.10.0"
types-PyYAML = "^6.0"
