[project]
name = "tg-bot"
version = "0.1.0"
description = "Telegram bot client"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot==21.4",
    "httpx>=0.27.0",
    "shared",
]

[dependency-groups]
dev = [
    "mypy>=1.10.0",
    "types-PyYAML>=6.0",
    "pytest>=8.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
]

[tool.uv.sources]
shared = { path = "../../shared", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
