[project]
name = "tg-bot"
version = "0.1.0"
description = "Telegram bot client"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot==21.4",
    "httpx>=0.27.0",
    "shared",
]

[dependency-groups]
dev = [
    "mypy>=1.10.0",
    "types-PyYAML>=6.0",
    "pytest>=8.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "deptry>=0.22.0",
]

[tool.uv.sources]
shared = { path = "../../shared", editable = true }

[tool.deptry]
ignore_notebooks = true
pep621_dev_dependency_groups = ["dev"]

[tool.deptry.per_rule_ignores]
# Internal packages (services.*) are not pip dependencies
DEP001 = ["services"]
# Transitive deps used directly — structlog via shared
DEP003 = ["structlog"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
